--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="header__img"></div>
     <nav class="breadcrumbs">
       <ol class="breadcrumbs__list">
-        <li class="breadcrumbs__item">YOU’RE HERE</li>
-        <li class="breadcrumbs__item current">IMPROVISE</li>
-        <li class="breadcrumbs__item">ADAPT</li>
-        <li class="breadcrumbs__item">OVERCOME</li>
+        <li class="breadcrumbs__item">Step 1</li>
+        <li class="breadcrumbs__item current">Step 2</li>
+        <li class="breadcrumbs__item">Step 3</li>
+        <li class="breadcrumbs__item">Step 4</li>
       </ol>
     </nav>
     </header>
